test/classes/deitz/inherit/test_inherit_error2.good
Error: Class hierarchy is cyclic (test_inherit_error2.chpl:1)
